# Multi-Robot-Coverage-Planning

./: .clang-format  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.catkin_tools/profiles/: profiles.yaml
.catkin_tools/profiles/debug/: build.yaml  devel_collisions.txt
.catkin_tools/profiles/release/: build.yaml  devel_collisions.txt
.github/workflows/: docker.yaml  lint.yaml  ros-ci.yaml
src/: .gitignore  CPPLINT.cfg
src/agent/agent/: CMakeLists.txt  package.xml
src/agent/bringup/: CMakeLists.txt  package.xml
src/agent/bringup/launch/: coverage.launch  explore.launch
src/agent/filters/: CMakeLists.txt
src/agent/navigation/: package.xml
src/agent/navigation/config/coverage/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/agent/navigation/config/exploration/: dwa_local_planner_params.yaml
src/agent/navigation/launch/: amcl.launch  move_base_exploration.launch
src/agent/slam/: CMakeLists.txt  package.xml
src/agent/slam/config/: gmapping_params.yaml
src/agent/slam/launch/: gmapping.launch
src/agent/tracking_pid/: setup.py
src/cooperative_mapping/: CMakeLists.txt  package.xml
src/cooperative_mapping/cooperative_mapping/: package.xml
src/cooperative_mapping/cooperative_mapping/launch/: cooperative_mapping.launch
src/cooperative_mapping/frontier_exploration/: package.xml
src/cooperative_mapping/frontier_exploration/src/: costmap_client.cpp
src/cooperative_mapping/rviz/: rviz.rviz
src/coverage_planning/: CMakeLists.txt  package.xml
src/coverage_planning/config/: coverage_progress_params.yaml
src/coverage_planning/launch/: bcd.launch  coverage_progress.launch  optimizer.launch  procmap.launch
src/coverage_planning/maps/: map1.pgm  map2.pgm  map2.yaml  map4.yaml  simple.yaml
src/coverage_planning/scripts/: bcd.py  coverage_progress.py  coverage_progress_visualizer.py  optimizer.py  procmap.py
src/frontier_exploration/: CMakeLists.txt  package.xml
src/frontier_exploration/config/: params.yaml
src/frontier_exploration/include/frontier_exploration/: explore.h  frontier_search.h
src/frontier_exploration/src/: explore.cpp  frontier_search.cpp  node.cpp
src/full_coverage_path_planner/: CMakeLists.txt  package.xml
src/full_coverage_path_planner/config/: coverage_progress_visualizer_params.yaml
src/full_coverage_path_planner/coverage_maps/: cov0.pgm  cov0.yaml  cov1.pgm  cov1.yaml  cov2.pgm  cov2.yaml  cov3.pgm  cov3.yaml  merge.py  test_merge.launch
src/full_coverage_path_planner/include/full_coverage_path_planner/: boustrophedon_stc.h  common.h  full_coverage_path_planner.h
src/full_coverage_path_planner/launch/: cover_map.launch  coverage_progress.launch  optimizer.launch  path_planner.launch
src/full_coverage_path_planner/maps/: map1.pgm  map1.yaml  map1_small.pgm  map1_small.yaml  map2_small.pgm  map2_small.yaml  map3.pgm  map3.yaml  map3_small.pgm  map3_small.yaml  map4.pgm  map4_small.pgm  map4_small.yaml  office.pgm  office.yaml  simple.pgm
src/full_coverage_path_planner/nodes/: coverage_progress_visualizer.py  multi_robot_bringup.py  optimizer.py
src/full_coverage_path_planner/rviz/: rviz.rviz
src/full_coverage_path_planner/scripts/: coverage_progress_visualizer.py  eval_progress.py  map_merge.py  multi_robot_bringup.py  optimizer.py
src/full_coverage_path_planner/src/: boustrophedon_stc.cpp  common.cpp  coverage_progress_visualizer_node.cpp  full_coverage_path_planner.cpp  main.cpp
src/full_coverage_path_planner/test/include/full_coverage_path_planner/: util.h
src/full_coverage_path_planner/test/src/: test_boustrophedon_stc.cpp  test_common.cpp  util.cpp
src/robot/filters/: CMakeLists.txt  package.xml
src/robot/filters/launch/: ekf.launch
src/robot/filters/scripts/: imu_frame_id_correction.py
src/robot/follow_waypoints/: package.xml  setup.py
src/robot/follow_waypoints/launch/: follow_waypoints.launch
src/robot/follow_waypoints/nodes/: follow_waypoints
src/robot/follow_waypoints/src/follow_waypoints/: follow_waypoints.py
src/rviz_plugins/: CMakeLists.txt  README.md  package.xml  plugin.xml
src/rviz_plugins/include/rviz_plugins/: topic_info.hpp
src/rviz_plugins/include/topics_rviz_plugin/: display_topics.hpp
src/rviz_plugins/src/: gazebo_physics_gui.cpp  topic_info.cpp
src/server/cooperative_mapping/cooperative_mapping/: CMakeLists.txt
src/server/cooperative_mapping/cooperative_mapping/launch/: cooperative_mapping.launch
src/server/cooperative_mapping/cooperative_mapping/rviz/: rviz.rviz
src/simulation/: CMakeLists.txt  package.xml
src/simulation/include/simulation/: gazebo_2Dmap_plugin.h
src/simulation/launch/: gazebo.launch  multi_robot.launch  multi_robot_slam.launch  office.launch  simple_world.launch  spawn.launch
src/simulation/plugins/: gazebo_2Dmap_plugin.cpp
src/simulation/rviz_plugins/: CMakeLists.txt  LICENSE  package.xml
src/simulation/rviz_plugins/include/rviz_plugins/: display_topics.hpp  gazebo_physics_gui.hpp  gazebo_remote.hpp
src/simulation/rviz_plugins/src/: display_topics.cpp
src/simulation/scripts/: multi_robot_spawner.py
src/simulation/simulation/: package.xml
src/simulation/simulation/include/simulation/: common.h
src/simulation/simulation/launch/: multi_robot_slam.launch  spawn.launch
src/simulation/simulation/plugins/: gazebo_2Dmap_plugin.cpp
src/simulation/simulation/scripts/: multi_robot_spawner.py
src/simulation/simulation/worlds/: map1_small.world  map4.world  map4_small.world
src/simulation/src/: gz_realtime_factor_node.cpp
src/simulation/worlds/: map1.world  map1_small.world  map2.world  map2_small.world  map3.world  map3_small.world  map4.world  map4_small.world  office.world  simple.world
src/topics_rviz_plugin/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  plugin.xml
src/topics_rviz_plugin/include/topics_rviz_plugin/: display_topics.hpp  topic_info.hpp
src/topics_rviz_plugin/src/: display_topics.cpp  topic_info.cpp
src/tracking_pid/: CMakeLists.txt
tools/: docker-setup.sh  lint.sh  run_tests.sh  tree_md.sh
(+61 files in other folders)
