<?xml version="1.0"?>
<package format="2">
    <name>full_coverage_path_planner</name>
    <version>0.6.5</version>
    <description>
        Full coverage path planning provides a move_base_flex plugin that can plan a path that will fully cover a given
        area.
        This package has been modified such that a boustophedon pattern is used rather than a spiral algorithm.
        This package was further modified with scripts and nodes for multi-robot coverage.
    </description>
    <author email="cesar.lopez@nobleo.nl">Cesar Lopez</author>
    <author email="ferry.schoenmakers@nobleo.nl">Ferry Schoenmakers</author>
    <author email="tim.clephas@nobleo.nl">Tim Clephas</author>
    <author email="jerrel.unkel@nobleo.nl">Jerrel Unkel</author>
    <author>Loy van Beek</author>
    <author>Yury Brodskiy</author>
    <author email="ethanc.kim@uwaterloo.ca">Ethan Kim</author>
    <author email="ashwin5059198@gmail.com">Ashwin A Nayar</author>
    <author email="gauthamga.gga@gmail.com">Gautham Govind A</author>
    <author email="harshinechooli@gmail.com">Harshin N</author>

    <maintainer email="ashwin5059198@gmail.com">Ashwin A Nayar</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslint</build_depend>
    <depend>base_local_planner</depend>
    <depend>costmap_2d</depend>
    <depend>pluginlib</depend>
    <depend>nav_core</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>tf2</depend>
    <depend>geometry_msgs</depend>
    <exec_depend>amcl</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>move_base</exec_depend>
    <exec_depend>multirobot_map_merge</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-yaml</exec_depend>
    <test_depend>cv_bridge</test_depend>
    <test_depend>rosunit</test_depend>
    <test_depend>tracking_pid</test_depend>
    <test_depend>roslaunch</test_depend>

    <export>
        <nav_core plugin="${prefix}/fcpp_plugin.xml"/>
    </export>

</package>
