<?xml version="1.0"?>
<package format="2">
    <name>agent</name>
    <version>0.0.0</version>
    <description>The agent metapackage</description>

    <maintainer email="ashwin5059198@gmail.com">Ashwin A Nayar</maintainer>

    <license>TODO</license>

    <author email="ashwin5059198@gmail.com">Ashwin A Nayar</author>
    <author email="gauthamga.gga@gmail.com">Gautham Govind A</author>
    <author email="harshinechooli@gmail.com">Harshin N</author>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <metapackage/>
    </export>
</package>
