<?xml version="1.0"?>
<package format="2">
    <name>simulation</name>
    <version>0.0.0</version>
    <description>The simulation package</description>

    <maintainer email="ashwin5059198@gmail.com">Ashwin A Nayar</maintainer>

    <license>TODO</license>

    <author email="ashwin5059198@gmail.com">Ashwin A Nayar</author>
    <author email="gauthamga.gga@gmail.com">Gautham Govind A</author>
    <author email="harshinechooli@gmail.com">Harshin N</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>gazebo</build_depend>

    <depend>roscpp</depend>
    <depend>nav_msgs</depend>
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>gazebo_msgs</depend>
    <test_depend>roslaunch</test_depend>
    <test_depend>roslint</test_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>multirobot_map_merge</exec_depend>
    <exec_depend>turtlebot3_description</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
</package>
